[project]
name = "argus-api-client"
dynamic = ["version"]
description = "A Python API client library for the Argus alert aggregator server"
readme = "README.md"
authors = [{name="Sikt - Kunnskapssektorens Tjenesteleverandør", email="kontakt@sikt.no"}]
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "simple_rest_client",
    "iso8601",
]

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "ipython",
    "isort",
    "pre-commit",
    "pytest",
    "ruff",
    "tox",
    "twine",
]

[tool.setuptools.dynamic]
version = {attr = "pyargus.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88
extend-exclude = [
    ".egg-info",
]
output-format = "full"
