[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-api-client"
dynamic = ["version"]
description = "A Python API client library for the Argus alert aggregator server"
readme = "README.md"
authors = [{name="Sikt - Kunnskapssektorens Tjenesteleverandør", email="kontakt@sikt.no"}]
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "simple_rest_client",
    "iso8601",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-argus-server>=0.2.0",
]
dev = [
    "build",
    "coverage",
    "ipython",
    "pre-commit",
    "ruff",
    "tox",
    "twine",
    {include-group = "test"},
]

[tool.setuptools.dynamic]
version = {attr = "pyargus.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88
extend-exclude = [
    ".egg-info",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["I"]
