[metadata]
name = PyArgus
version = attr: src.VERSION
description = A Python API client library for the Argus API
long_description = file: README.md
keywords = api, argus, client
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
install_requires =
    simple_rest_client
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
