[metadata]
name = argus-api-client
version = attr: pyargus.VERSION
description = A Python API client library for the Argus alert aggregator server
long_description = file: README.md
keywords = api, argus, client
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    simple_rest_client
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
